# Secure-ML

./: CMakeLists.txt
experiment/: debug-info.txt  matrix-generate-test-result.txt  run-test-for.sh  run-test-modify.sh  run-test.sh
src/: linear_regression.hpp  matrix_generate_main.cpp  matrix_generate_setup.cpp  matrix_generate_setup.hpp  matrix_generate_test.hpp  setup_phase.cpp
